[project]
name = "lab-1"
version = "0.1.0"
description = "Quantum Computing Lab 1 Exercises"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyfunctional>=1.5.0",
    "bitarray>=3.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
